// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlusIcon: Component should render correctly 1`] = `
<plus.svg
  style={
    Object {
      "fill": "#FFF",
      "height": "60px",
      "shapeRendering": "crispEdges",
      "width": "60px",
    }
  }
/>
`;

exports[`PlusIcon: Component should render with custom styles 1`] = `
<plus.svg
  style={
    Object {
      "fill": "blue",
      "height": "60px",
      "shapeRendering": "crispEdges",
      "width": "60px",
    }
  }
/>
`;
